--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -69,6 +69,7 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
+        android:translationZ="10dp"
         android:visibility="gone">
 
         <android.support.v7.widget.CardView
@@ -118,6 +119,7 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
+        android:translationZ="10dp"
         android:visibility="gone">
 
         <android.support.v7.widget.CardView
