--- a/app/src/main/res/layout/rv_ad_view.xml
+++ b/app/src/main/res/layout/rv_ad_view.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.grarak.kerneladiutor.views.AdNativeExpress xmlns:android="http://schemas.android.com/apk/res/android"
+<com.grarak.kerneladiutor.views.AdLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />
