--- a/app/src/main/res/layout/ad_layout_view.xml
+++ b/app/src/main/res/layout/ad_layout_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -46,4 +45,4 @@
         android:background="?attr/selectableItemBackground"
         android:text="@string/remove_ad"
         android:textColor="?attr/colorAccent" />
-</LinearLayout>
+</merge>
